# TrackNetV3

./: LICENSE  README.md  dataset.py  denoise.py  evaluation.py  event_detection.py  imgLabel.py  parser1.py  predict.py  preprocess.py  pyproject.toml  requirements.txt  show_rally.py  show_trajectory.py  train copy.py  utils.py  utils_for_imgLabel.py  zz_Tracknet_badminton_DataConvert.py  安裝步驟與使用指令README.md  實驗結果.xlsx
raw_data/: 00001.csv  00002.csv  00003.csv  00004.csv  00005.csv  00008.csv  00009.csv  00010.csv  00011.csv  00014.csv  00017.csv  00022.csv  00023.csv  00024.csv  00025.csv  00026.csv  00027.csv  00028.csv  00029.csv  00030.csv  00031.csv  00032.csv  00033.csv  00034.csv  00035.csv  00038.csv  00039.csv  00040.csv  00041.csv  00042.csv  00045.csv  00046.csv  00047.csv  00048.csv  00049.csv  00050.csv
raw_data2/: 00001.csv  00003.csv  00004.csv  00005.csv  00006.csv  00007.csv  00009.csv  00011.csv  00012.csv  00013.csv
scripts/: extract_frames.py
最新成果與原始TracknetV2 model對比/TrackNetV2/: model原始檔.py
最新成果與原始TracknetV2 model對比/TrackNetV3/: model.py
